[package]
name = "file-system"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.10", default-features = false, features = ["fs"] }
